tooling/nargo_cli/tests/snapshots/execution_failure/validate_main_input_not_shadowed/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: unused variable vec
   ┌─ src/main.nr:10:9
   │
10 │ fn main(vec: BoundedVec<Field, 3>) {}
   │         --- unused variable
   │

error: Assertion failed: BoundedVec length exceeds its capacity
    ┌─ std/collections/bounded_vec.nr:678:9
    │
678 │         assert(self.len() <= MaxLen, "BoundedVec length exceeds its capacity");
    │         ----------------------------------------------------------------------
    │
    = Call stack:
      1: ?
              at src/main.nr:10:11
      2: <impl Validate for BoundedVec<T, MaxLen>>::validate
              at std/collections/bounded_vec.nr:678:9

Failed assertion
