tooling/nargo_cli/tests/snapshots/execution_failure/validate_main_input_not_shadowed/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: BoundedVec length exceeds its capacity
    ┌─ std/collections/bounded_vec.nr:678:9
    │
678 │         assert(self.len() <= MaxLen, "BoundedVec length exceeds its capacity");
    │         ----------------------------------------------------------------------
    │
    = Call stack:
      1: ?
              at src/main.nr:9:9
      2: <impl Validate for BoundedVec<T, MaxLen>>::validate
              at std/collections/bounded_vec.nr:678:9

Failed assertion
