tooling/nargo_cli/tests/snapshots/execution_failure/validate_main_input_not_shadowed/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: unused variable vec
   ┌─ src/main.nr:10:9
   │
10 │ fn main(vec: BoundedVec<Field, 3>) {}
   │         --- unused variable
   │

error: BoundedVec length exceeds its capacity
    ┌─ std/collections/bounded_vec.nr:678:16
    │
678 │         assert(self.len() <= MaxLen, "BoundedVec length exceeds its capacity");
    │                -------------------- Assertion failed
    │
    = Call stack:
      1: ?
              at src/main.nr:10:6
      2: ?
              at src/main.nr:10:11

Error interpreting main function
